gitops/istio/1.20-solo/istio-ingress/templates/default-gw.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: primary-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - '*'
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: wildcard-tls
    hosts:
    - '*'
